--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -12,7 +12,7 @@ a new workspace that contains a clone of a Git repository.
 This way, you can clone a Git repository that is hosted on GitHub,
 a GitLab, a Bitbucket or Microsoft Azure DevOps server instances.
 
-TIP: You can also use the *Git Repo URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a Git repository to start a new workspace.
+TIP: You can also use the *Git Repository URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a Git repository to start a new workspace.
 
 [IMPORTANT]
 ====
@@ -80,7 +80,7 @@ See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additio
 ====
 
 +
-.The URL syntax for starting a new workspace with a clone of a Gitlab instance repository
+.The URL syntax for starting a new workspace with a clone of a GitLab instance repository
 ====
 
 * `pass:c,a,q[{prod-url}#https://__<gitlab_host>__/__<user_or_org>__/__<repository>__]` starts a new workspace with a clone of the default branch.
