--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -71,13 +71,13 @@ This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers t
 +
 [IMPORTANT]
 ====
-The automated Git credential injection is not supported.
-To configure the Git credentials, use xref:using-a-git-provider-access-token.adoc[configure personal access token] guide.
+Automated Git credential injection is not supported.
+To configure the Git credentials, use the xref:using-a-git-provider-access-token.adoc[configure personal access token] guide.
 ====
 +
 .Verification
 
-After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page. When the new workspace is ready, the workspace IDE loads in the browser tab.
+After you enter the URL to start a new workspace in a browser tab, the workspace starting page appears. When the new workspace is ready, the workspace IDE loads in the browser tab.
 +
 The workspace has a unique URL: `pass:c,a,q[{prod-url}]/__<user_name>__/__<unique_url>__`.
 
