--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -7,16 +7,15 @@
 [id="starting-a-new-workspace-with-a-clone-of-a-git-repository"]
 = Starting a new workspace with a clone of a Git repository
 
-With {prod-short}, you can visit a URL in your browser to start
+With {prod-short}, you can use a URL in your browser to start
 a new workspace that contains a clone of a Git repository.
-This way, you can clone a Git repository that is hosted on GitHub,
-a GitLab, a Bitbucket or Microsoft Azure DevOps server instances.
+This way, you can clone a Git repository that is hosted on GitHub, GitLab, Bitbucket or Microsoft Azure DevOps server instances.
 
 TIP: You can also use the *Git Repository URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a Git repository to start a new workspace.
 
 [IMPORTANT]
 ====
-Starting a workspace using an HTTPS URL from a Git service other mentioned above will fail.
+Starting a workspace using an HTTPS URL from a Git service other than GitHub, GiLab, Bitbucket, or Microsoft Azure DevOps will fail.
 ====
 
 [IMPORTANT]
@@ -59,7 +58,7 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?__<optional_parameters>__ <1>
 +
 [TIP]
 ====
-It is possible to use Git+SSH URLs to start a new workspace.
+You can use GIT+SSH URLs to start a new workspace.
 See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations]
 ====
 +
@@ -107,7 +106,7 @@ See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additio
 ====
 
 +
-After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page.
+After you enter the URL to start a new workspace in a browser tab, the workspace starting page appears.
 +
 When the new workspace is ready, the workspace IDE loads in the browser tab.
 +
