--- a/modules/end-user-guide/pages/mounting-git-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-git-configuration.adoc
@@ -7,7 +7,7 @@
 [id="mounting-git-configuration"]
 = Mounting Git configuration
 
-This procedure describes how to mount a Git config file to a workspace.
+Follow the instructions below to mount a Git config file in a workspace.
 
 .Prerequisites
 
@@ -35,7 +35,7 @@ data:
 ----
 +
 <1> A user namespace. Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
-<2> Your Git user's name and email.
+<2> Your Git user name and email.
 
 . Apply the ConfigMap.
 +
@@ -49,6 +49,6 @@ EOF
 .Verification
 
 . xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[Start a new workspace by using the URL of a remote Git repository] that the Git provider hosts.
-. Once the workspace is started, open a new terminal in the `tools` container and run `git config --get-regexp user.*`. You should observe your Git user's name and email in the output.
+. Once the workspace is started, open a new terminal in the `tools` container and run `git config --get-regexp user.*`. Your Git user name and email should appear in the output.
 
 
