--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -9,7 +9,7 @@
 
 [IMPORTANT]
 ====
-To initiate a clone of the Git repository in the filesystem of the new workspace, the devfile must contain project info.
+To initiate a clone of the Git repository in the filesystem of a new workspace, the devfile must contain project info.
 
 See https://devfile.io/docs/2.2.0/adding-projects.
 ====
@@ -18,7 +18,7 @@ With {prod-short}, you can open a *devfile* URL in your browser to start a new w
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
-TIP: You can also use the *Git Repo URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a *devfile* to start a new workspace.
+TIP: You can use the *Git Repo URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a *devfile* to start a new workspace.
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
