--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -19,6 +19,7 @@
 ** xref:benefits-of-pull-requests-review-in-che.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
+** xref:try-in-web-ide-github-action.adoc[]
 * xref:customizing-workspace-components.adoc[]
 * xref:devfile-introduction.adoc[]
 * xref:ides-in-workspaces.adoc[]
