--- a/modules/end-user-guide/pages/getting-started-with-che.adoc
+++ b/modules/end-user-guide/pages/getting-started-with-che.adoc
@@ -2,7 +2,7 @@
 :description: Getting started with {prod-short}
 :keywords: getting-started, user-onboarding, new-user, new-users
 :navtitle: Getting started with {prod-short}
-:page-aliases:user-onboarding
+//:page-aliases:user-onboarding
 
 [id="getting-started-with-che"]
 = Getting started with {prod-short}
