--- a/modules/end-user-guide/pages/try-in-web-ide-github-action.adoc
+++ b/modules/end-user-guide/pages/try-in-web-ide-github-action.adoc
@@ -2,6 +2,6 @@
 // = Try in Web IDE GitHub action
 :navtitle: Try in Web IDE GitHub action
 :keywords: hosted-che, try-in-web-ide-github-action
-:page-aliases: .:try-in-web-ide-github-action
+:page-aliases:
 
-include::partial$assembly_try-in-web-ide-github-action.adoc[]
+include::partial$assembly_try-in-web-ide-github-action.adoc[offset=1]
