--- a/modules/end-user-guide/partials/ref_about-try-in-web-ide-github-action.adoc
+++ b/modules/end-user-guide/partials/ref_about-try-in-web-ide-github-action.adoc
@@ -12,7 +12,7 @@ This factory URL creates a new workspace from the pull request branch on Eclipse
 NOTE: The Che documentation repository (https://github.com/eclipse/che-docs) is a real-life example where the Try in Web IDE GitHub action helps reviewers quickly test pull requests. Experience the workflow by navigating to a recent pull request and opening a factory URL.
 
 .Pull request comment created by the Try in Web IDE GitHub action. Clicking the badge opens a new workspace for reviewers to test the pull request.
-image::hosted-che/github-action-comment.png[test]
+image::github-action-comment.png[test]
 
 .Pull request status check created by the Try in Web IDE GitHub action. Clicking the "Details" link opens a new workspace for reviewers to test the pull request.
-image::hosted-che/github-action-status-check.png[test]
+image::github-action-status-check.png[test]
