--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -14,7 +14,7 @@ Working with {prod-short} in your browser involves multiple URLs:
 * [.underline]#The URLs for starting a new workspace#
 * The URLs of your workspaces in use
 
-With {prod-short}, you can visit a URL in your browser to start a new workspace that contains a clone of a Git repository. You can use either an HTTPS or SSH URL to start a new workspace with a clone of a Git repository.
+With {prod-short}, you can use either an HTTPS or SSH URL to start a new workspace with a clone of a Git repository.
 
 [IMPORTANT]
 ====
