fixup! Add some SSH notes

--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -19,7 +19,7 @@ With {prod-short}, you can use either an HTTPS or SSH URL to start a new workspa
 [IMPORTANT]
 ====
 //TODO: point to the dashboard SSH procedure when https://github.com/eclipse/che/issues/22111 is done.
-* If you use a SSH URL to start a new workspace, you must propagate the SSH key must be propagated. See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations] for more information.
+* If you use an SSH URL to start a new workspace, you must propagate the SSH key must be propagated. See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations] for more information.
 * If the SSH URL points to a private repository, you must apply an access token to be able to fetch the `devfile.yaml` content. You can do this either by accepting an SCM authentication page or following a xref:using-a-git-provider-access-token.adoc[Personal Access Token] procedure.
 
 ====
