chore: Improve articles about Git repositories URLs usage (#2642)
* chore: Improve articles about Git repositories URLs usage

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/end-user-guide/pages/starting-a-workspace-from-a-raw-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-workspace-from-a-raw-devfile-url.adoc
@@ -7,20 +7,20 @@
 [id="starting-a-workspace-from-a-raw-devfile-url"]
 = Starting a workspace from a raw devfile URL
 
-Working with {prod-short} in your browser involves multiple URLs:
-
-* The URL of your organization's {prod-short} instance, used as part of all the following URLs
-* The URL of the *devfile*
-* [.underline]#The URLs for starting a new workspace#
-* The URLs of your workspaces in use
-
 With {prod-short}, you can open a *devfile* URL in your browser to start a new workspace.
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
-TIP: You can also use the *Git Repo URL ** field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a *devfile* to start a new workspace.
+TIP: You can use the *Git Repo URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a *devfile* to start a new workspace.
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
+
+[IMPORTANT]
+====
+To initiate a clone of the Git repository in the filesystem of a new workspace, the devfile must contain project info.
+
+See https://devfile.io/docs/2.2.0/adding-projects.
+====
 
 .Prerequisites
 
@@ -33,12 +33,29 @@ To start a new workspace from a devfile URL:
 
 . Optional: Visit your {prod-short} dashboard pages to authenticate to your organization's instance of {prod-short}.
 
-. Visit the URL to start a new workspace using the basic syntax:
+. Visit the URL to start a new workspace from a *public* repository using the basic syntax:
 [source,subs="+quotes,+attributes,+macros"]
 +
 ----
 pass:c,a,q[{prod-url}]#__<devfile_url>__
 ----
++
+You can pass your personal access token to the URL to access a devfile from *private* repositories:
+[source,subs="+quotes,+attributes,+macros"]
++
+----
+pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path_to_devfile> <1>
+----
++
+<1> Your personal access token that you generated on the Git provider's website.
++
+This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
++
+[IMPORTANT]
+====
+Automated Git credential injection does not work in this case.
+To configure the Git credentials, use the xref:using-a-git-provider-access-token.adoc[configure personal access token] guide.
+====
 +
 [TIP]
 ====
@@ -50,47 +67,30 @@ pass:c,a,q[{prod-url}]#__<devfile_url>__?__<optional_parameters>__ <1>
 <1> See xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[].
 ====
 +
-.A URL for starting a new workspace
+.A URL for starting a new workspace from a public repository
 ====
 
 `pass:c,a,q[{prod-url}#https://raw.githubusercontent.com/che-samples/cpp-hello-world/main/devfile.yaml]`
 
 ====
 +
-[TIP]
+.A URL for starting a new workspace from a private repository
 ====
-You can pass your Personal Access Token to the URL to have access to private repositories:
-[source,subs="+quotes,+attributes,+macros"]
-----
-pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
-----
-<1> Your Personal Access Token that you generated on the Git provider's website.
 
-This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
+`pass:c,a,q[{prod-url}#https://__<token>__@raw.githubusercontent.com/che-samples/cpp-hello-world/main/devfile.yaml]`
+
 ====
 +
 .Verification
 
-After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page. When the new workspace is ready, the workspace IDE loads in the browser tab. 
-
-The workspace has a unique URL: `pass:c,a,q[{prod-url}]#workspace__<unique_url>__`.
-
-[TIP]
-====
-You can not bookmark a URL for starting a new workspace in the address bar, but you can create the bookmark by using the browser bookmark manager instead:
-
-* In Mozilla Firefox, go to *☰* *>* *Bookmarks* *>* *Manage bookmarks Ctrl+Shift+O* *>* *Bookmarks Toolbar* *>* *Organize* *>* *Add bookmark*.
-
-* In Google Chrome, go to *⋮* *>* *Bookmarks* *>* *Bookmark manager* *>* *Bookmarks bar* *>* *⋮* *>* *Add new bookmark*.
-====
-[IMPORTANT]
-====
-To initiate a clone of the Git repository in the filesystem of the new workspace, the devfile must contain project info.
-
-See https://devfile.io/docs/2.2.0/adding-projects.
-====
+After you enter the URL to start a new workspace in a browser tab, the workspace starting page appears. When the new workspace is ready, the workspace IDE loads in the browser tab.
++
+The workspace has a unique URL: `pass:c,a,q[{prod-url}]/__<user_name>__/__<unique_url>__`.
 
 .Additional resources
 
 * xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 * xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
+* xref:using-a-git-provider-access-token.adoc[]
+* xref:mounting-git-configuration.adoc[]
+* link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations]
