--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -28,6 +28,7 @@
 *** xref:creating-image-pull-secrets.adoc[]
 *** xref:using-a-git-provider-access-token.adoc[]
 ** xref:mounting-configmaps.adoc[]
+*** xref:mounting-git-configuration.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
 *** xref:enabling-maven-artifact-repositories.adoc[]
 *** xref:enabling-gradle-artifact-repositories.adoc[]
