--- a/modules/end-user-guide/pages/using-che-in-team-workflow.adoc
+++ b/modules/end-user-guide/pages/using-che-in-team-workflow.adoc
@@ -2,7 +2,7 @@
 :description: Using {prod-short} in team workflow
 :keywords: adopt, adopting, adoption
 :navtitle: Using {prod-short} in team workflow
-:page-aliases:adopting-che
+//:page-aliases:adopting-che
 
 [id="using-che-in-team-workflow"]
 = Using {prod-short} in team workflow
