docs: adding the token verification note to the 'Using a Git-provider access token' section
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -44,6 +44,22 @@ On OpenShift, you can use the `oc` command-line tool to log in to the cluster:
 +
 [IMPORTANT]
 ====
+Personal access tokens are sensitive information and should be kept confidential. Treat them like passwords. If you are having trouble with authentication, ensure you are using the correct token and have the appropriate permissions for cloning repositories:
+
+. Open a terminal locally on your computer
+. Use the `git` command to clone the repository using your personal access token. The format of the `git` command vary based on the Git Provider. As an example, GitHub personal access token verification can be done using the following command:
+
+----
+git clone https://<PAT>@github.com/username/repo.git
+----
+
+Replace `<PAT>` with your personal access token, and `username/repo` with the appropriate repository path.
+If the token is valid and has the necessary permissions, the cloning process should be successful. Otherwise, this is an indicator of incorrect personal access token, insufficient permissions, or other issues.
+====
+
++
+[IMPORTANT]
+====
 For GitHub Enterprise Cloud, verify that the token is link:https://docs.github.com/en/enterprise-cloud@latest/authentication/authenticating-with-saml-single-sign-on/authorizing-a-personal-access-token-for-use-with-saml-single-sign-on[authorized for use within the organization].
 ====
 
