chore: Add Configuring getting started samples article
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -62,6 +62,8 @@
 *** xref:configuring-storage-classes.adoc[]
 *** xref:configuring-the-storage-strategy.adoc[]
 *** xref:configuring-storage-sizes.adoc[]
+** xref:configuring-dashboard.adoc[]
+*** xref:configuring-getting-started-samples.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
 *** xref:configuring-oauth-for-git-providers.adoc[]
 **** xref:configuring-oauth-2-for-github.adoc[]
