--- a/modules/end-user-guide/pages/starting-a-workspace-from-a-raw-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-workspace-from-a-raw-devfile-url.adoc
@@ -1,11 +1,11 @@
 :_content-type: PROCEDURE
-:description: Starting a new workspace from a devfile URL
+:description: Starting a workspace from a raw devfile URL
 :keywords: start-new-workspace, start-a-new-workspace, how-to-start-new-workspace, how-to-start-a-new-workspace, starting-a-new-workspace, how-to-start-workspace, how-to-start-a-workspace
-:navtitle: Starting a new workspace from a devfile URL
+:navtitle: Starting a workspace from a raw devfile URL
 :page-aliases:
 
-[id="starting-a-new-workspace-from-a-devfile-url"]
-= Starting a new workspace from a devfile URL
+[id="starting-a-workspace-from-a-raw-devfile-url"]
+= Starting a workspace from a raw devfile URL
 
 Working with {prod-short} in your browser involves multiple URLs:
 
