fix: updating end user page navigation (rhdevdocs-5564) (#2641)

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -1,29 +1,28 @@
 .User Guide
 
-* xref:adopting-che.adoc[]
-** xref:developer-workspaces.adoc[]
-** xref:stack-samples.adoc[]
-** xref:first-time-contributors.adoc[]
-** xref:benefits-of-pull-requests-review-in-che.adoc[]
-* xref:user-onboarding.adoc[]
-** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
-** xref:starting-a-new-workspace-from-a-devfile-url.adoc[]
-** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
-*** xref:url-parameter-concatenation.adoc[]
-*** xref:url-parameter-for-the-ide.adoc[]
-*** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
-*** xref:url-parameter-for-the-devfile-file-name.adoc[]
-*** xref:url-parameter-for-the-devfile-file-path.adoc[]
-*** xref:url-parameter-for-the-workspace-storage.adoc[]
-*** xref:url-parameter-for-additional-remotes.adoc[]
-*** xref:url-parameter-for-container-image.adoc[]
+* xref:getting-started-with-che.adoc[]
+** xref:starting-a-workspace-from-a-git-repository-url.adoc[]
+*** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
+**** xref:url-parameter-concatenation.adoc[]
+**** xref:url-parameter-for-the-ide.adoc[]
+**** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
+**** xref:url-parameter-for-the-devfile-file-name.adoc[]
+**** xref:url-parameter-for-the-devfile-file-path.adoc[]
+**** xref:url-parameter-for-the-workspace-storage.adoc[]
+**** xref:url-parameter-for-additional-remotes.adoc[]
+**** xref:url-parameter-for-container-image.adoc[]
+** xref:starting-a-workspace-from-a-raw-devfile-url.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
+* xref:using-che-in-team-workflow.adoc[]
+** xref:first-time-contributors.adoc[]
+** xref:benefits-of-pull-requests-review-in-che.adoc[]
+** xref:try-in-web-ide-github-action.adoc[]
 * xref:customizing-workspace-components.adoc[]
 * xref:devfile-introduction.adoc[]
 * xref:ides-in-workspaces.adoc[]
-** xref:defining-a-common-ide.adoc[]
 ** xref:microsoft-visual-studio-code-open-source-ide.adoc[]
+** xref:defining-a-common-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
 ** xref:mounting-secrets.adoc[]
 *** xref:creating-image-pull-secrets.adoc[]
