--- a/modules/end-user-guide/pages/starting-a-workspace-from-a-git-repository-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-workspace-from-a-git-repository-url.adoc
@@ -1,11 +1,11 @@
 :_content-type: PROCEDURE
-:description: Starting a new workspace with a clone of a Git repository
+:description: Starting a workspace from a Git repository URL
 :keywords: start-new-workspace, start-a-new-workspace, how-to-start-new-workspace, how-to-start-a-new-workspace, starting-a-new-workspace, clone-git-repository, clone-a-git-repository, how-to-start-workspace, how-to-start-a-workspace
-:navtitle: Starting a new workspace with a clone of a Git repository
+:navtitle: Starting a workspace from a Git repository URL
 :page-aliases:
 
-[id="starting-a-new-workspace-with-a-clone-of-a-git-repository"]
-= Starting a new workspace with a clone of a Git repository
+[id="starting-a-workspace-from-a-git-repository-url"]
+= Starting a workspace from a Git repository URL
 
 With {prod-short}, you can use a URL in your browser to start
 a new workspace that contains a clone of a Git repository.
