end-user-guide: add tip about VSCode config
Users can configure IDE preferences on a per-workspace basis. This
commit adds a small tip showing users how to open the config.

--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -27,6 +27,11 @@ You can automate installation of Microsoft Visual Studio Code extensions from th
 
 ====
 
+[TIP]
+====
+Configure IDE preferences on a per-workspace basis by invoking the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Palette] and selecting *Preferences: Open Workspace Settings*.
+====
+
 NOTE: You might see your organization's branding in this IDE if your organization customized it through a branded build.
 
 include::partial$proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc[leveloffset=+1]
