--- a/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
+++ b/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
@@ -1,7 +1,7 @@
 [id="restoring-node-extra-ca-certs-variable-value"]
 = Restoring correct NODE_EXTRA_CA_CERTS variable value
 
-Use the command described below to restore the correct NODE_EXTRA_CA_CERTS variable value every time before dependencies are downloaded.
+Use the command below to set NODE_EXTRA_CA_CERTS to point to where you have your SSL/TLS certificate. 
 
 .Procedure
 
