--- a/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
+++ b/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
@@ -10,5 +10,6 @@ Use the command below to set NODE_EXTRA_CA_CERTS to point to where you have your
 [source, yaml]
 ----
 `export NODE_EXTRA_CA_CERTS=/public-certs/nexus.cer` <1>
+`npm install`
 ----
 <1> `/public-certs/nexus.cer` is the path to self-signed SSL/TLS certificate of Nexus artifactory.
