--- a/modules/end-user-guide/partials/proc_disabling-self-signed-certificate-validation.adoc
+++ b/modules/end-user-guide/partials/proc_disabling-self-signed-certificate-validation.adoc
@@ -1,7 +1,7 @@
 [id="disabling-self-signed-certificate-validation"]
 = Disabling self-signed certificate validation
 
-Follow the instructions below to disable self-signed certificate validation.
+Run the command below to disable SSL, which will bypass validation of your self-signed certificates. Note that this is a potential security risk. For a better solution, configure use of a self-signed certificate you trust with `NODE_EXTRA_CA_CERTS`. 
 
 .Procedure
 
