--- a/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
+++ b/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
@@ -1,5 +1,5 @@
 [id="restoring-node-extra-ca-certs-variable-value"]
-= Restoring correct NODE_EXTRA_CA_CERTS variable value
+= Configuring NODE_EXTRA_CA_CERTS to use a certificate
 
 Use the command below to set NODE_EXTRA_CA_CERTS to point to where you have your SSL/TLS certificate. 
 
