--- a/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
+++ b/modules/end-user-guide/partials/proc_restoring-node-extra-ca-certs-variable-value.adoc
@@ -7,7 +7,7 @@ Use the command below to set NODE_EXTRA_CA_CERTS to point to where you have your
 
 * Run the following command in the terminal:
 +
-[source, yaml]
+[source, bash]
 ----
 `export NODE_EXTRA_CA_CERTS=/public-certs/nexus.cer` <1>
 `npm install`
