--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -26,14 +26,14 @@ apiVersion: v1
 metadata:
   name: tls-cer
   annotations:
-    controller.devfile.io/mount-path: /public-certs/nexus.cer
+    controller.devfile.io/mount-path: /public-certs
     controller.devfile.io/mount-as: file
   labels:
     controller.devfile.io/mount-to-devworkspace: 'true'
     controller.devfile.io/watch-secret: 'true'
 data:
-  tls.cer: >-
-    __<Base64_encoded_content_of_public_cert>__ <1>
+  nexus.cer: >-
+    <Base64_encoded_content_of_public_cert>
 ----
 <1> Base64 encoding with disabled line wrapping.
 
