fix: adding empty snippet (crw-4945) (#2658)
* crw-4945

* crw-4945

* crw-4945

* crw-4945

--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -37,3 +37,5 @@ $ {prod-cli} server:deploy \
 . Allow incoming traffic from the {prod-short} namespace to all Pods in the user {orch-namespace}s. See: xref:configuring-network-policies.adoc[].
 
 include::partial$snip_installing-che-in-a-restricted-environment-additional-resources.adoc[]
+
+include::partial$snip_{project-context}-setting-up-ansible-sample.adoc[]
