--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -38,4 +38,4 @@ $ {prod-cli} server:deploy \
 
 include::partial$snip_installing-che-in-a-restricted-environment-additional-resources.adoc[]
 
-include::partial$snip_{project-context}-setting-up-ansible-sample.adoc[1]
+include::partial$snip_{project-context}-setting-up-ansible-sample.adoc[leveloffset=+1]
