fix: CA chain file name
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -37,6 +37,7 @@ See {orch-cli-link}.
 
 . Concatenate all CA chains PEM files to import, into the `custom-ca-certificates.pem` file, and remove the return character that is incompatible with the Java truststore.
 +
+[subs="+attributes,+quotes"]
 ----
 $ cat ca-cert-for-{prod-id-short}-*.pem | tr -d '\r' > custom-ca-certificates.pem
 ----
