--- a/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
@@ -16,5 +16,5 @@ include::partial$proc_setting-up-the-github-oauth-app.adoc[leveloffset=+1]
 
 include::partial$proc_applying-the-github-oauth-app-secret.adoc[leveloffset=+1]
 
-In order to configure OAuth 2.0 for another GitHub provider,
+To configure OAuth 2.0 for another GitHub provider,
 you have to repeat the steps above and create a second GitHub OAuth Secret but with a different name.
