--- a/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
@@ -17,4 +17,4 @@ include::partial$proc_setting-up-the-github-oauth-app.adoc[leveloffset=+1]
 include::partial$proc_applying-the-github-oauth-app-secret.adoc[leveloffset=+1]
 
 To configure OAuth 2.0 for another GitHub provider,
-you have to repeat the steps above and create a second GitHub OAuth Secret but with a different name.
+you have to repeat the steps above and create a second GitHub OAuth Secret with a different name.
