chore: Mention that it is possible to configure another GitHub OAuth … (#2663)
* chore: Mention that it is possible to configure another GitHub OAuth 2 secret

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update modules/administration-guide/pages/configuring-oauth-2-for-github.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-oauth-2-for-github.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

---------

Signed-off-by: Anatolii Bazko <abazko@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
@@ -15,3 +15,6 @@ To enable users to work with a remote Git repository that is hosted on GitHub:
 include::partial$proc_setting-up-the-github-oauth-app.adoc[leveloffset=+1]
 
 include::partial$proc_applying-the-github-oauth-app-secret.adoc[leveloffset=+1]
+
+To configure OAuth 2.0 for another GitHub provider,
+you have to repeat the steps above and create a second GitHub OAuth Secret with a different name.
